# EzyCad

./: .clang-format  .cursorignore  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  agents.md  bugs.md  ezycad-style.md  ezycad_code_style.md  ezycad_doc_style.md  imgui.ini  issue.dm  issue.md  pyproject.toml  python  readme.md  readme.txt  scripting.md  serve_with_logging.py  usage-occt-view.md  usage-settings.md  usage-sketch.md  usage.md  usage.txt  vcpkg.json
.cursor/rules/: ezycad-ascii-source.mdc  ezycad-style.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: cmake-single-platform.yml  docs.yml  source-hygiene.yml  windows-msvc.yml
.windsurf/rules/: code-style-guide.md
agents/: README.md  dev.md  ezycad-ascii-source.md  user-docs-sync.md
agents/conventions/: ascii-source.md  github-drafts.md  markdown-tables.md  occt-handles.md  occt-wasm-dual-version.md  token-lean.md  user-docs-sync.md
agents/drafts/issues/: README.md  _template.md
agents/drafts/issues/active/: draft-imgui-openpopup-id-stack-and-tables.md  draft-line-edge-place-from-center-contextual-help.md  draft-sketch-slot-circle-intersection-splitting.md  draft-src-prefix-refactor-sketch-recorder.md  gh-102-polar-dup-sketch-based-reference.md  gh-113-refactor1-dimensions-sketch-nodes-occt-wasm.md  gh-134-linear-edge-automatic-splitting.md  gh-148-sketch-ui-snap-settings-midpoints.md  gh-163-sketch-module-refactor.md  gh-165-sketch-slot-circle-intersection-splitting.md  gh-184-sketch-face-walk-incoming-arc-tangent.md  gh-186-unit-test-refactor.md  gh-187-shrink-github-pages-wasm.md  gh-189-extrude-sketch-face-test.md  gh-190-shp-unit-tests.md  gh-192-align-markdown-tables.md  gh-194-sketch-appearance-settings.md  gh-196-occt-dual-version-handle-warnings.md  gh-198-scripting-fuse-cut-common-delete.md  (+8 more)
agents/drafts/prs/: README.md  _template.md
agents/issues/: 003-ui-improvements-sketch-shape-lists-and-style.md  005-format-src-repo-root-split-path.md  006-pr-body.txt  007-ui-improve4-pr-body.txt  009-sketch-tool-precise-input-docs-and-options-help.md  010-document-linear-edge-automatic-splitting.md  011-edge-midpoint-option.md  013-operational-axis-visibility-and-snap.md  014-sketch-delta-undo-redo.md  017-sketch-undo-stable-ids.md  018-ezy-format-v3-zip-underlay-assets.md  README.md  issue.md
agents/outreach/: discoverability.md
agents/plans/: README.md  cross-section-tool.md  shape-list-hierarchy-phase3.md  shp-origin-orientation.md  sketch-from-shape-section.md  sketch-mode-shape-faint.md  wasm-alt-drag-multiselect.md  wasm-multithreading.md
agents/prs/: 001-ui-improvements-sketch-shape-lists.md  002-sketch-list-dimension-controls-and-dim-arrow-settings.md  004-sketch-tool-input-docs-options-pane-help.md  005-document-sketch-edge-splitting-behavior.md  006-edge-midpoint-option.md  007-sketch-improvements-place-from-center-contextual-help.md  008-github-body.md  008-operational-axis-revolve-shape-info.md  009-sketch-delta-undo-redo.md  011-sketch-ui-snap-settings-midpoints.md  012-sketch-undo-stable-ids.md  PR.md
agents/workflows/: docs-build.md  local-dev.md  release.md
cmake/: EzyCadPython.cmake
doc/: AI_summary.md  almost_bolt.ezy  conf.py  index.rst  occt_view_cursor_ai.md  occt_view_grok.md  p1.ezy  readthedocs.md  requirements.txt  shp_move_grok.md  shp_rotate_grok.md
doc/tmp/: bug1.1.ezy
docs/: .gitignore  bugs.md  building-occt.md  conf.py  ezycad_code_style.md  ezycad_doc_style.md  index.rst  readthedocs.md  scripting.md  usage-occt-view.md  usage-settings.md  usage-sketch.md  usage.md
docs/_build/: .buildinfo  bugs.html  building-occt.html  ezycad_code_style.html  ezycad_doc_style.html  genindex.html  index.html  objects.inv  scripting.html  search.html  searchindex.js  usage-occt-view.html  usage-settings.html  usage-sketch.html  usage.html
docs/_build/.doctrees/: bugs.doctree  building-occt.doctree  environment.pickle  ezycad_code_style.doctree  ezycad_doc_style.doctree  index.doctree  scripting.doctree  usage-occt-view.doctree  usage-settings.doctree  usage-sketch.doctree  usage.doctree
docs/_build/_sources/: building-occt.md.txt  ezycad_code_style.md.txt  usage-sketch.md.txt
docs/_static/: custom.css
docs/tmp/: bug1.ezy
icons/: ICON_SOURCES.md
res/: about.md  default.ezy  ezycad_settings.json
res/examples/: 6-sides.ezy  cool_part1.ezy  revolve.ezy  slot_1.ezy  slot_sketch.ezy
res/scripts/lua/: basic.lua  sierpinski.lua
res/scripts/python/: basic.py  sierpinski.py
scripts/: align_md_tables.py  build-occt-793-wasm.cmd  build-occt-793-wasm.ps1  build-occt-v8-wasm.cmd  build-occt-v8-wasm.ps1  build-occt-wasm.ps1  check-nonascii-src.cmd  check-nonascii-src.ps1  ezycad_graphical_debugging.xml  ezycad_remote.py  format-src.ps1  pbf-to-png.py  pimpl_gen.py  rename-sketch-to-skt.ps1  sync-github-pages-html.ps1
scripts/ezycad/: __init__.py  __main__.py  _session.py  api.py
scripts/ezycad.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: attic.cpp  dbg.h  delta.h  doc_delta.cpp  doc_delta.h  ezy_asset_store.cpp  ezy_asset_store.h  ezy_io.cpp  ezy_io.h  geom.cpp  geom.h  geom.inl  gui.cpp  gui.h  gui_add.cpp  gui_mode.cpp  gui_modes.cpp  gui_modes.h  gui_occt_glfw_win.cpp  gui_occt_glfw_win.h  gui_occt_view.cpp  gui_occt_view.h  gui_settings.cpp  log.cpp  log.h  lua_console.cpp  lua_console.h  main.cpp  main_orig.cpp  mode.cpp  mode.h  modes.cpp  modes.h  occt_glfw_win.cpp  occt_glfw_win.h  occt_view.cpp  occt_view.h  occt_view.inl  occt_view_wasm_bisect.h  paths.cpp  (+131 more)
src/doc/: gui.md  script.md  shape.md  sketch.md  undo-redo.md  utility.md
tests/: doc_link_tests.cpp  shp_tests.cpp  sketch_json_tests.cpp  sketch_ops_tests.cpp  sketch_test_fixture.cpp  sketch_test_fixture.h  sketch_test_fixture.inl  sketch_tests.cpp  sketch_topo_tests.cpp  skt_json_tests.cpp  skt_ops_tests.cpp  skt_test_fixture.cpp  skt_test_fixture.h  skt_tests.cpp  skt_topo_tests.cpp
tools/: ezycad_graphical_debugging.xml  fix_doc_img_tags.py  pbf-to-png.ps1  pimpl_gen.py
web/: EzyCad.html  index.html
(+35 files in other folders)
